[gd_scene load_steps=2 format=3 uid="uid://cq8rm4tn5uvwx"]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Time: 06:00"

[node name="SeasonLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Season: Spring"

[node name="ToolLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Tool: None"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Gold: 100"
horizontal_alignment = 2

[node name="CarbonLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Carbon: 0.0 t COâ‚‚"
horizontal_alignment = 2

[node name="TideLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "Tide: Mid"
horizontal_alignment = 2

[node name="KeybindHints" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 14
text = "[I] Inventory  [J] Quests  [R] Research  [M] Market  [Tab] Carbon"
horizontal_alignment = 1
